Move to pure Bash YAML parsing + add support for multiline strings
NB: The code does not properly differentiate between >/>- or |/|-

--- a/test/multiline_string.yaml
+++ b/test/multiline_string.yaml
@@ -3,8 +3,14 @@
 parameters: # asdjnasd
   build:
     short_option: "B"
-    help: >
+    help: |
       Directory
       Default value: build
     type: path # asdjnasd
     default: 'build'
+  compile-db:
+    help: >
+      Generate
+      compile
+      database  # helpful
+    type: bool
